--- a/index.html
+++ b/index.html
@@ -620,3 +620,95 @@ html {
   margin: 0;
 }
 </style>
+
+
+<style>
+  .navbar-brand img {
+  max-width: 80px;
+  height: auto;
+}
+.navbar-brand h1 {
+  font-size: 1.5rem; /* smaller on mobile */
+}
+@media (min-width: 768px) {
+  .navbar-brand h1 {
+    font-size: 30px;
+  }
+}
+.carousel-inner img {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: cover;
+}
+
+.carousel-caption h5 {
+  font-size: 1.5rem;
+}
+.carousel-caption p {
+  font-size: 1rem;
+}
+@media (min-width: 768px) {
+  .carousel-caption h5 {
+    font-size: 2.5rem;
+  }
+  .carousel-caption p {
+    font-size: 1.5rem;
+  }
+}
+
+.about-image img {
+  width: 100%;
+  height: auto;
+}
+.category-card {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+.category-card img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.brands-track img {
+  max-height: 80px; /* smaller on mobile */
+}
+@media (min-width: 768px) {
+  .brands-track img {
+    max-height: 120px;
+  }
+}
+
+.brands-track {
+  gap: 20px;
+}
+@media (min-width: 768px) {
+  .brands-track {
+    gap: 60px;
+  }
+}
+iframe {
+  width: 100%;
+  height: 400px;
+}
+@media (min-width: 768px) {
+  iframe {
+    height: 450px;
+  }
+}
+h1, h2, h5, p {
+  word-wrap: break-word;
+}
+
+/* Reduce padding/margin on mobile */
+@media (max-width: 576px) {
+  body { padding-top: 70px; }
+  .category-title { font-size: 40px; }
+  .brands-title { font-size: 40px; }
+  .section-title { font-size: 30px; }
+  .contact-title { font-size: 2rem; }
+}
+
+</style>
