Update about section in  index.html

--- a/index.html
+++ b/index.html
@@ -272,20 +272,15 @@ html {
     <!-- Text -->
     <div class="col-lg-6 about-text">
       <p>
-        At <strong>Nethra Eyecare Opticals</strong>, located in the vibrant city of Pattambi, 
-        we take immense pride in redefining customer service and satisfaction in the optical industry. 
-        With over <strong>25 years of expertise</strong>, we are committed to offering innovative vision care solutions 
-        that elevate the experience of every customer.
+       In the dynamic city of Pattambi, we at <strong> Nethra Eyecare Opticals</strong> take great delight in revolutionizing customer happiness and service in the optical sector. 
+       With more than <strong>25 years of experience</strong>, we are dedicated to providing cutting-edge eye care solutions that improve each client's experience.
       </p>
       <p>
-        As a distinguished member of the renowned <strong>Popular Opticals</strong> family, 
-        Nethra Eyecare Opticals is part of a legacy that includes esteemed brands like 
-        <em>Brothers Opticals, Popular Opticals, Eye Point Opticals</em>, and <em>Nethra Eye Hospital</em>.
-        Our journey has been one of continuous growth, innovation, and customer-centric excellence.
+      Nethra Eyecare Opticals is a respected member of the well-known Popular Opticals family, which has a long history that includes prestigious brands like as <strong>Nethra Eye Hospital, Brothers Opticals, Popular Opticals, and Eye Point Opticals. </strong>
+      Our path has been one of constant expansion, inventiveness, and quality focused on the needs of the consumer.
       </p>
       <p>
-        With a focus on providing unparalleled eyewear and optical services, 
-        we proudly offer the largest collection of both international and domestic eyewear brands.
+       We are pleased to provide the widest selection of both domestic and foreign eyewear brands, with an emphasis on delivering unmatched eyewear and optical services.
       </p>
     </div>
     <!-- Image -->
