--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ html {
           <a class="nav-link" href="#appointment">Appointment</a>
        
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact Us</a>
+          <a class="nav-link" href="#contactus">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -626,7 +626,7 @@ html {
 </style>
 </section>
 
-<footer class="bg-dark text-light pt-5">
+<footer class="bg-dark text-light pt-5" id="contactus">
   <div class="container">
     <h1 class="text-center mb-4 contact-title">Contact Us</h1>
 
@@ -650,19 +650,20 @@ html {
       </div>
 
       <div class="col">
-        <div class="card contact-card h-100 bg-secondary text-light border-0">
-          <div class="card-body text-center">
-            <h5 class="card-title">Social Media</h5>
-            <p>Follow us on Facebook & Instagram</p>
-            <a href="https://www.instagram.com/nethra.pattambi" class="text-light d-block mb-2">
-              <i class="bi bi-instagram me-2"></i>nethra.pattambi
-            </a>
-            <a href="https://www.facebook.com/share/1MSP8NJBNT/?mibextid=wwXIfr" class="text-light d-block">
-              <i class="bi bi-facebook me-2"></i>Nethra EyeCare & Opticals
-            </a>
-          </div>
-        </div>
-      </div>
+  <div class="card contact-card h-100 bg-secondary text-light border-0">
+    <div class="card-body text-center">
+      <h5 class="card-title">Social Media</h5>
+      <p>Follow us on Facebook & Instagram</p>
+      <a href="https://www.instagram.com/nethra.pattambi" class="text-light text-decoration-none d-block mb-2">
+        <i class="bi bi-instagram me-2"></i>nethra.pattambi
+      </a>
+      <a href="https://www.facebook.com/share/1MSP8NJBNT/?mibextid=wwXIfr" class="text-light text-decoration-none d-block">
+        <i class="bi bi-facebook me-2"></i>Nethra EyeCare & Opticals
+      </a>
+    </div>
+  </div>
+</div>
+
     </div>
 
     <div class="map-responsive mb-3">
